--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "release": "standard-version && git push origin master"
+    "release": "standard-version && git push --follow-tags origin master"
   },
   "private": true,
   "dependencies": {
